# utillib

./: .gitignore  CMakeLists.txt  README.md
examples/: template.c
include/utillib/: cli.h  core.h  files.h  utils.h
src/cli/: CMakeLists.txt  config.h  options.c  options.h  question.c  question.h
src/cli/src/: options.c  options.h  progress_bar.c  progress_bar.h  question.c  question.h
src/core/: CMakeLists.txt  array.c  array.h  atexit.h  buffer.c  buffer.h  check.c  error.c  error.h  list.c  string.c
src/core/src/: array.c  atexit.c  check.h  dynmem.c  dynmem.h  error.c  error.h  list.h  string.c  string.h
src/files/: CMakeLists.txt  common.c  ihex.h
src/files/src/: common.h  ihex.c  mif.c  mif.h
src/utils/: CMakeLists.txt  convert.c  error_buffer.h  evaluate.c  evaluate.h  tokenizer.c  tokenizer.h
src/utils/src/: convert.c  convert.h  error_buffer.c  error_buffer.h  evaluate.c  evaluate.h  string_cache.c  string_cache.h  tokenizer.c
